@@ -1,4 +1,4 @@
-export _HOME=/apps/smoc-protocol-proxy-cmpp
+export _HOME=/smoc/apps/protocol-proxy-sgip
 export _LIB=$_HOME/lib
 export _CONFIG=$_HOME/config
 
@@ -6,5 +6,5 @@ export _CONFIG=$_HOME/config
 cd $_HOME
 echo `pwd`
 
-java -classpath $_CONFIG:$_LIB/* -server -Xmx512m -Xms512m -Dfile.encoding=UTF-8 com.protocol.proxy.server.ProxyServer
+java -classpath $_CONFIG:$_LIB/* -server -Xmx1024m -Xms1024m -XX:SurvivorRatio=8 -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/smoc/logs/protocol-proxy-sgip -Ddruid.mysql.usePingMethod=false -Dfile.encoding=UTF-8 com.protocol.proxy.server.ProxyServer
  
